# Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  Image.cpp  Image.h  LICENSE.txt  Light.cpp  Light.h  Main.cpp  Material.h  Math.h  Notes.txt  OutputImage.ppm  Plane.cpp  README.md  Ray.cpp  Raytracer.sln  Raytracer.vcxproj  Raytracer.vcxproj.filters  Renderer.cpp  Renderer.h  Sphere.cpp  Sphere.h
PartitionTest/: PartitionTest.sln
PartitionTest/PartitionTest/: Main.cpp  PartitionTest.vcxproj
docs/: Notes.txt  cuda_notes.txt
docs/logs/: Timing_Log.txt  Timing_Log_Multithreading.txt  Timing_Log_cuda.txt  Timing_Log_example.txt
docs/models/: Cone.mtl  Timing_Log.txt  box.mtl  dragon_2.mtl  torus.mtl
include/: BoundingBox.h  Camera.h  Core.h  CudaDef.h  CudaLoader.h  GeometryObj.h  Image.h  Intersection.h  Light.h  Logger.h  Material.h  MathHelper.h  Node.h  Plane.h  RaytracerConfig.h  Renderer.h  Scene.h  Shape.h  Sphere.h  Texture.h  ThreadPool.h  TriObject.h  Triangle.h  managed.h
include/helper/: array.h  static_if.h
lib/: CMakeLists.txt
lib/lodepng/: lodepng.cpp  lodepng.h
src/: AccelerationStruct.cpp  AccelerationStruct.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  Core.cpp  CudaDef.h  CudaLoader.cpp  CudaLoader.h  GeometryObj.cpp  GeometryObj.h  Image.cpp  Image.h  Intersection.cpp  Intersection.h  Light.cpp  Light.h  Logger.cpp  Logger.h  Main.cpp  Material.cpp  Material.h  Math.h  MathHelper.h  Node.cpp  Node.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  RaytracerConfig.h.in  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shape.cpp  (+14 more)
src/helper/: resource_helper.h
