#Dir: Root/lib

FIND_PATH(GLM_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/glm")
INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIR})

FIND_PATH(LODEPNG_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lodepng")
INCLUDE_DIRECTORIES(${LODEPNG_DIR})
ADD_LIBRARY(LodePNG ${LODEPNG_DIR}/lodepng.cpp)
INSTALL(TARGETS LodePNG DESTINATION "${PROJECT_SOURCE_DIR}/lib/lodepng")
INSTALL(FILES lodepng.h DESTINATION "${PROJECT_SOURCE_DIR}/lib/lodepng")
